--- a/index.html
+++ b/index.html
@@ -119,6 +119,16 @@
 
                 <div class="panel">
                     <div class="panel-header">
+                        <h2 class="panel-title">Historial de Sesiones</h2>
+                        <div class="panel-subtitle">Registro de sesiones de estudio</div>
+                    </div>
+                    <div class="sessions-list" id="sessionsContainer">
+                        <div class="sessions-empty">No hay sesiones registradas</div>
+                    </div>
+                </div>
+
+                <div class="panel">
+                    <div class="panel-header">
                         <h2 class="panel-title">Logros</h2>
                         <div class="panel-subtitle">Desbloquea por tiempo de enfoque y rachas</div>
                     </div>
