mas iteraciones todavia

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <div class="app-container">
         <aside class="sidebar" id="sidebar">
             <div class="sidebar-header">
-                <div class="logo">
-                    <span class="logo-icon">📚</span>
-                    <span class="logo-text">Study Tracker</span>
+                <div class="logo-row">
+                    <div class="logo">
+                        <span class="logo-icon">📚</span>
+                        <span class="logo-text">Study Tracker</span>
+                    </div>
+                    <button id="themeToggleBtn" class="icon-btn" type="button" title="Alternar modo nocturno">🌙</button>
                 </div>
                 <button class="btn-add-subject" id="addSubjectBtn">
                     <span class="btn-icon">+</span>
@@ -173,9 +176,6 @@
                                                 <option value="60m">60 min</option>
                                                 <option value="custom">Personalizado</option>
                                             </select>
-                                        </div>
-                                        <div class="timer-pill" title="Modo Nocturno">
-                                            <button id="themeToggleBtn" class="theme-toggle" title="Alternar modo nocturno">🌙</button>
                                         </div>
                                     </div>
                                     <div class="timer-actions">
